--- a/committeeApp/package.json
+++ b/committeeApp/package.json
@@ -1,41 +1,45 @@
 {
-    "name": "committeeapp",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-
-        "android": "react-native run-android",
-        "ios": "react-native run-ios",
-        "start": "react-native start",
-        "test": "jest",
-        "lint": "eslint ."
-    },
-    "dependencies": {
-        "exp-cli": "^5.0.0",
-        "expo": "^39.0.3",
-        "expo-google-app-auth": "^8.1.3",
-        "expo-google-sign-in": "^8.3.0",
-        "firebase": "^7.21.1",
-        "react": "16.13.1",
-        "react-native": "0.63.2",
-        "react-native-gesture-handler": "~1.7.0",
-        "react-navigation": "^4.4.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.8.4",
-        "@babel/runtime": "^7.8.4",
-        "@react-native-community/eslint-config": "^1.1.0",
-        "babel-jest": "^25.1.0",
-        "eslint": "^6.5.1",
-        "jest": "^25.1.0",
-        "metro-react-native-babel-preset": "^0.59.0",
-        "react-test-renderer": "16.13.1"
-    },
-    "jest": {
-        "preset": "react-native"
-    },
-    "main": "index.js",
-    "author": "",
-    "license": "ISC",
-    "description": ""
+  "name": "committeeapp",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint .",
+    "expo": "npx expo start",
+    "clean:android": "cd android && ./gradlew clean && cd ../"
+  },
+  "dependencies": {
+    "expo": "^39.0.3",
+    "expo-cli": "^3.28.2",
+    "expo-google-app-auth": "^8.1.3",
+    "expo-google-sign-in": "^8.3.0",
+    "firebase": "^7.22.0",
+    "jetifier": "^1.6.6",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-eject": "^0.1.2",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-navigation": "^4.4.2",
+    "yarn": "^1.22.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
